packages/p2p/src/components/my-profile/payment-methods/payment-methods-list/payment-methods-list.scss
.payment-methods-list {
    &__button {
        margin: 0 0 2.4rem;
    }

    &__list {
        &-container {
            .dc-dropdown-container {
                margin-left: 0;
            }
        }

        &-header {
            margin: 0;
        }
    }
}

