Fix payment methods list layout bugs

--- a/packages/p2p/src/components/my-profile/payment-methods/payment-methods-list/payment-methods-list.scss
+++ b/packages/p2p/src/components/my-profile/payment-methods/payment-methods-list/payment-methods-list.scss
@@ -5,6 +5,8 @@
 
     &__list {
         &-container {
+            max-width: 67.2rem;
+
             .dc-dropdown-container {
                 margin-left: 0;
             }
@@ -12,6 +14,17 @@
 
         &-header {
             margin: 0;
+        }
+
+        &-body {
+            display: flex;
+            flex-wrap: wrap;
+
+            .payment-method-card {
+                &--large {
+                    margin-left: 1.6rem;
+                }
+            }
         }
     }
 }
